Min jdk 11 instead of 17 now.