@@ -2,6 +2,7 @@ package io.github.cbuschka.objset;
 
 import java.util.List;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public interface TriSelect<Element1, Element2, Element3> {
@@ -12,7 +13,7 @@ public interface TriSelect<Element1, Element2, Element3> {
     Stream<Triple<Element1, Element2, Element3>> tripleStream();
 
     default List<Triple<Element1, Element2, Element3>> toList() {
-        return tripleStream().toList();
+        return tripleStream().collect(Collectors.toList());
     }
 
     default void forEach(TriConsumer<Element1, Element2, Element3> consumer) {
