@@ -3,6 +3,7 @@ package io.github.cbuschka.objset;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public interface UniSelect<Element1> {
@@ -17,7 +18,7 @@ public interface UniSelect<Element1> {
     }
 
     default List<Element1> toList() {
-        return stream().toList();
+        return stream().collect(Collectors.toList());
     }
 }
 
